--- a/package.json
+++ b/package.json
@@ -1,27 +1,43 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+  "name": "react-facebook-share-link",
+  "version": "1.0.4",
+  "keywords": [
+    "react",
+    "facebook",
+    "share",
+    "link"
+  ],
+  "main": "dist/index.js",
+  "author": "Kennedy Rose <krose@escaladesports.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/escaladesports/react-facebook-share-link.git"
   },
-  "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "aos": "2.3.4",
-    "cheerio": "1.0.0-rc.10",
-    "got": "^12.0.3",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "request": "2.88.2",
-    "swr": "1.2.2"
+  "license": "MIT",
+  "scripts": {
+    "build": "esca-scripts build",
+    "dev": "esca-scripts dev",
+    "prepublishOnly": "npm run build",
+    "reset": "esca-scripts reset",
+    "serve": "esca-scripts serve --src dist-test",
+    "test": "npm run build && npm run test:bundle && npm run test:run",
+    "test:bundle": "esca-scripts bundle --src test/wrapper/index.html --dist dist-test",
+    "test:run": "esca-scripts test",
+    "test:serve": "npm run build && npm run test:bundle && esca-scripts serve --src dist-test",
+    "travis": "opn https://travis-ci.org/escaladesports/react-facebook-share-link/branches"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0"
+    "esca-scripts": "^1.4.0",
+    "fs-extra": "^6.0.0",
+    "get-port": "^3.2.0",
+    "opn-cli": "^3.1.0",
+    "puppeteer": "^1.4.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "static-server": "^2.2.1"
   },
-  "keywords": [],
-  "name": "ficomic",
-  "description": ""
+  "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "styled-jsx": "^2.2.6"
+  }
 }
